// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticate should render 1`] = `
<styled.div>
  <Segment>
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
    </Form>
  </Segment>
</styled.div>
`;

exports[`Authenticate should render a loading message when passed loading as a prop 1`] = `
<styled.div>
  <Segment>
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
    </Form>
    <styled.div>
      <Loader
        active={true}
        inline="centered"
      />
    </styled.div>
  </Segment>
</styled.div>
`;

exports[`Authenticate should render an error when passed as a prop 1`] = `
<styled.div>
  <Segment>
    <Header
      as="h1"
      icon={true}
      textAlign="center"
    >
      <Icon
        as="i"
        circular={true}
        name="user"
      />
      <HeaderContent>
        Sign Up
      </HeaderContent>
    </Header>
    <Form
      as="form"
    >
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Email"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Password"
        type="password"
      />
      <FormInput
        as={[Function]}
        control={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
      <Button
        as="button"
        color="blue"
        fluid={true}
        onClick={[Function]}
      >
        Sign Up
      </Button>
      <Divider
        horizontal={true}
      >
        Or
      </Divider>
      <Link
        href="/signin"
        replace={false}
        to="/signin"
      >
        <Button
          as="button"
          color="violet"
          fluid={true}
        >
          Sign In
        </Button>
      </Link>
    </Form>
    <Message
      negative={true}
    >
      <p>
        test error
      </p>
    </Message>
  </Segment>
</styled.div>
`;
